Fixed Roll Template Header alignment again.

--- a/D&D_3-5/charsheet_3-5.css
+++ b/D&D_3-5/charsheet_3-5.css
@@ -806,36 +806,43 @@ input, select {
 	color: rgb(126, 45, 64);
 	font-family: "Arial", Helvetica, sans-serif;
 	font-variant: small-caps;
+	text-align: left;
 }
  .sheet-rolltemplate-DnD35StdRoll .sheet-header-initiative {
 	color: rgb(204, 153, 51);
 	font-family: "Arial", Helvetica, sans-serif;
 	font-variant: small-caps;
+	text-align: left;
 }
  .sheet-rolltemplate-DnD35StdRoll .sheet-header-spell{
 	color: rgb(45, 64, 126);
 	font-family: "Arial", Helvetica, sans-serif;
 	font-variant: small-caps;
+	text-align: left;
 }
  .sheet-rolltemplate-DnD35StdRoll .sheet-header-ability {
 	color: rgb(204, 115, 51);
 	font-family: "Arial", Helvetica, sans-serif;
 	font-variant: small-caps;
+	text-align: left;
 }
  .sheet-rolltemplate-DnD35StdRoll .sheet-header-save {
 	color: rgb(153, 77, 153);
 	font-family: "Arial", Helvetica, sans-serif;
 	font-variant: small-caps;
+	text-align: left;
 }
  .sheet-rolltemplate-DnD35StdRoll .sheet-header-skill {
 	color: rgb(64, 126, 45);
 	font-family: "Arial", Helvetica, sans-serif;
 	font-variant: small-caps;
+	text-align: left;
 }
  .sheet-rolltemplate-DnD35StdRoll .sheet-header-skillcat{
 	color: rgb(45, 126, 107);
 	font-family: "Arial", Helvetica, sans-serif;
 	font-variant: small-caps;
+	text-align: left;
 }
 .sheet-rolltemplate-DnD35StdRoll .sheet-header-basic{
     background-color: gray;
